@@ -1,3 +1,6 @@
+30 November 2006: Wouter
+	- Test for fallback in getaddrinfo more portable.
+
 29 November 2006: Wouter
 	- Fixed getaddrinfo error message to be more descriptive.
 	- Fallback to ip4 also if getaddrinfo fails for ip6.
